--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react": "^16.2.0",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
+    "react-redux": "^5.0.6",
+    "react-redux-loading": "^1.0.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
