--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "react-uuid": "^1.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "web-vitals": "^1.0.1"
